[package]
name = "restkv"
version = "0.1.0"
authors = ["ahxxm <i@ahxxm.com>"]
edition = "2021"

[dependencies]
# web https://github.com/seanmonstar/warp
tokio = { version = "1.22.0", features = ["full"] }
rand = "0.8.5" # random access-token
bytes = "1.2.1" # POST body
warp = "0.3.3" # routing
regex = "1.7.0" # validate param
lazy_static = "1.4.0" # global db instance
kv = { version = "0.24" } # no compression

# logger
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
pretty_env_logger = "0.4.0"

[profile.release]
lto = true
